# SynesthesiaX

./: CMakeLists.txt  README.md  package.xml
config/: pinhole_model.yaml
launch/: synesthesiax.launch
src/: Projector.cpp  Projector.hpp  synesthesiax.cpp
